pinned reppr branch

--- a/package.json
+++ b/package.json
@@ -45,9 +45,9 @@
       },
       "brave-core": {
         "dir": "src/brave",
-        "branch": "master",
+        "branch": "reppr",
         "repository": {
-          "url": "https://github.com/brave/brave-core.git"
+          "url": "git@github.com:brave/brave-core-private.git"
         }
       }
     },
