--- a/package.json
+++ b/package.json
@@ -47,8 +47,7 @@
         "dir": "src/brave",
         "branch": "reppr",
         "repository": {
-          "type": "git",
-          "url": "git+https://GITHUB_AUTH@github.com/brave/brave-core-private.git"
+          "url": "https://GITHUB_AUTH@github.com/brave/brave-core-private.git"
         }
       }
     },
