--- a/package.json
+++ b/package.json
@@ -45,7 +45,7 @@
       },
       "brave-core": {
         "dir": "src/brave",
-        "branch": "master",
+        "branch": "safebrowsing_fix_x86",
         "repository": {
           "url": "https://github.com/brave/brave-core.git"
         }
