--- a/package.json
+++ b/package.json
@@ -44,7 +44,7 @@
       },
       "brave-core": {
         "dir": "src/brave",
-        "branch": "master",
+        "branch": "page-graph-v1.5.81",
         "repository": {
           "url": "https://github.com/brave/brave-core.git"
         }
