--- a/package.json
+++ b/package.json
@@ -46,7 +46,7 @@
       },
       "brave-core": {
         "dir": "src/brave",
-        "branch": "1.11.x",
+        "branch": "android_syncv1_deprecated",
         "repository": {
           "url": "https://github.com/brave/brave-core.git"
         }
